devscripts (2.10.71) UNRELEASED; urgency=low

  [ Christoph Berg ]
  * debcommit (git): Don't treat "no files to commit" as an error when called
    with --release, otherwise it is not possible to tag after the final build.

  [ James Vega ]
  * bts: Use Pod::Text to remove POD markup before displaying the help.
    (Closes: #613502)
  * dget: Ignore IO::File errors from local cache when a URL is given.
    The local cache should be used when accessible, but not prevent downloads
    when it isn't.  (Closes: #599354)

  [ Patrick Schoenfeld ]
  * build-rdeps: Update release_pattern for the new InRelease release files,
    which apt began downloading in newer versions instead of the Release file.
    (Closes: #613941) 

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Fri, 18 Feb 2011 14:10:22 +0100

devscripts (2.10.70) unstable; urgency=low

  [ James Vega ]
  * debuild:
    + Properly quote shell variable when parsing options.  (Closes: #556248)
    + Don't treat “-nc” as implying binary only build.  (Closes: #607303)
    + Add recognition of dpkg-buildpackage's “-A” option for building only
      binary independent packages.
  * pts-subscribe: Handle “--until 0” the same as “--forever”.  (Closes:
    #604740)
  * uscan:
    + Update documentation to use “.+” instead of “.*” in groupings.  Thanks
      to Ben Finney for the patch.  (Closes: #606060)
    + Add “target” element to --dehs' XML, specifying the name of the
      downloaded file.  (Closes: #598514)
  * debcheckout: Use the correct prototype for set_destdir.  (Closes: #606053)
  * Use “mktemp --tmpdir” instead of specifying an absolute path under /tmp.
    (Closes: #610027)
  * Fix a typo in debchange(1).  (Closes: #610192)
  * bts: Make the message number optional for the “summary” sub-command.  This
    allows clearing an already set summary.  (Closes: #610326)
  * rmadison: Document udd url shorthand, added in 2.10.62.  (Closes: #589437)